--- a/about.html
+++ b/about.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="this is search engine optimization about Abuk Sedonia from kampala,uganda."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,7 +19,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
-    <title>About [YOUR NAME]</title>
+    <title>Kampala is the capital city of Uganda</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -49,7 +52,7 @@
       </div>
     </nav>
     <h1 class="text-center">About me</h1>
-    <h3 class="text-center">Front-end developer from [YOUR LOCATION]</h3>
+    <h3 class="text-center">Front-end developer from Kampala,Uganda</h3>
     <div class="about-paragraphs text-center">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
